syntax = "proto3";

option go_package = "todo/api/v1/pb";

package user;

service User {
  rpc AddUser (AddUserRequest) returns (AddUserReply) {}
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersReply) {}
  rpc LoginUser (LoginRequest) returns (LoginReply) {}
}

message AddUserRequest {
  string UserName = 1;
  string FirstName = 2;
  string LastName = 3;
  string Password = 4;
  string Location = 5;
}

message AddUserReply {
  string Id = 1;
}

message GetAllUsersRequest {
}

message GetAllUsersReply {
  message User {
    string Id = 1;
    string UserName = 2;
    string FirstName = 3;
    string LastName = 4;
    string Password = 5;
    string Location = 6;
  }
  repeated User result = 1;
}

message LoginRequest {
  string UserName = 1;
  string Password = 2;
}

message LoginReply {
  string Token = 1;
}